<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="extrace.main.ui.MainActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom"
        android:title="@string/action_new"/>
    
    <item
        android:id="@+id/action_my_package"
        android:orderInCategory="100"
        android:title="@string/action_my_package"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_my_message"
        android:orderInCategory="100"
        android:title="@string/action_my_message"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_my_location"
        android:orderInCategory="100"
        android:title="@string/action_my_location"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
