<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="extrace.ui.misc.CustomerEditActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/title_tel_code" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:text="@string/title_addr_code" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="text|textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/edtTelCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/edtName"
        android:ems="16"
        android:inputType="textPhonetic|phone" />

    <TextView
        android:id="@+id/txtRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/btGetRegion" />

    <ImageButton
        android:id="@+id/btnGetRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtRegion"
        android:layout_alignRight="@+id/edtName"
        android:background="#000000"
        android:src="@android:drawable/ic_menu_search" />

    <EditText
        android:id="@+id/edtAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtRegion"
        android:layout_below="@+id/txtRegion"
        android:layout_marginTop="16dp"
        android:ems="16"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/edtDpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtAddr"
        android:layout_below="@+id/edtAddr"
        android:layout_marginTop="16dp"
        android:ems="16"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/edtDpt"
        android:layout_marginTop="16dp"
        android:text="@string/title_post_code" />

    
    <EditText
        android:id="@+id/edtPostCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/edtName"
        android:ems="16"
        android:inputType="textPhonetic|phone" />

</RelativeLayout>